objects/Merchandise__c.object
<CustomObject>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal price</fullName>
                </value>
                <value>
                    <fullName>Good price</fullName>
                </value>
                <value>
                    <fullName>Half price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discounted_Price__c</fullName>
        <label>Discounted Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Price__c</fullName>
        <label>Original Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overall_Revenue__c</fullName>
        <label>Overall Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Merchandise</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merchanise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>